2020-06-09  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* pdfdev.c: Another workaround for fake-bold issue.
	(See changes 2019-06-30 and 2020-02-29)

2020-05-26  Akira Kakuto  <kakuto@w32tex.org>

	* dvi.c: Introduce rgba_used in order to indicate that
	rgba_color for a XeTeX font is used or not. It enables full
	range of opacity, 0-255.
	* configure.ac: Version 20200526.

2020-05-10  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* vf.c: reduce message by '-v' less than by '-vv' for
	fallback of virtual fonts.

2020-05-03  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* dvipdfmx-upjf.test, Makefile.{am,in},
	tests/Makefile_upjf, tests/upjf{,-r,-g}.tfm,
	tests/upjf.{tex,dvi,map}, tests/upjf_{full,omit}.vf,
	tests/upjf_{full,omit}.cnf, tests/UPJF-UTF16-H:
	Add a new test for fallback of virtual fonts.
	* vf.c: Tweak debugging message for fallback of virtual fonts.

2020-03-27  Karl Berry  <karl@tug.org>

	* TeX Live 2020.

2020-03-15  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* tfm.c, tfm.h, vf.c: Fallback multibyte character
	in virtual font for (u)pTeX.
	* configure.ac: version 20200315.
	https://github.com/texjporg/tex-jp-build/issues/99

	A new rule for virtual fonts is implemented:
	If a virtual font has no entry of a codepoint and the first
	MAPFONT designates a (u)pTeX TFM(JFM), then we designate the
	glyph (usually with a fullwidth metric) of the same codepoint
	in the TFM(JFM) with the smallest font ID.
	The new rule helps to shrink size of Japanese virtual fonts.

2020-02-29  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* pdfdev.c: Revert the commit on 2019-06-30: see
	https://tug.org/pipermail/tex-live/2020-February/044855.html.
	Note that the problem with fake-bold reappears!
	https://tug.org/pipermail/dvipdfmx/2019-June/000014.html.

2020-02-12  Akira Kakuto  <kakuto@w32tex.org>

	* dvipdfmx.c: Fix a potential bug in set_default_pdf_filename().
	see https://tug.org/pipermail/tex-live/2020-February/044731.html
