@@ -94,7 +94,7 @@ pdf_font_open_type1c (pdf_font *font)
 
   offset = sfnt_find_table_pos(sfont, "CFF ");
   if (offset < 1) {
-    ERROR("No \"CFF \" table found; not a CFF/OpenType font (10)?");
+    ERROR("No \"CFF \" table found; not a CFF/OpenType font (or variable font?) (10)?");
   }
 
   cffont = cff_open(sfont->stream, offset, 0);
@@ -296,7 +296,7 @@ pdf_font_load_type1c (pdf_font *font)
   }
   if (sfont->type != SFNT_TYPE_POSTSCRIPT ||
       (offset = sfnt_find_table_pos(sfont, "CFF ")) == 0) {
-    ERROR("Not a CFF/OpenType font (11)?");
+    ERROR("Not a CFF/OpenType font (or variable font?) (11)?");
   }
 
   cffont = cff_open(fp, offset, 0);
